# LIBELAS

./: .gitignore  CMakeLists.txt
App/: CMakeLists.txt  ELASStereo.cpp  ELASStereo.h  Timer.cpp  main.cpp
App/elas/: CMakeLists.txt  ELASStereo.cpp  ELASStereo.h  main.cpp
App/elasHal/: CMakeLists.txt  ELASStereo.cpp  ELASStereo.h  Timer.h  main.cpp
CMakeModules/: FindFreeGLUT.cmake  FindOpenMP.cmake  FindSSE.cmake
LIBELAS/: CMakeLists.txt
LIBELAS/src/: image.h
img/: aloe_left_disp.pgm  aloe_right_disp.pgm
